apps/docker-registry/registry-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: docker-registry
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app: docker-registry
spec:
  tls:
  - hosts:
    - registry.yourhostname.com
    secretName: docker-registry-tls
  rules:
  - host: registry.yourhostname.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-registry
          servicePort: 5000
